swim_client/src/configuration/tests/resources/invalid/unexpected-attr-nested.recon
@config {
    @downlink_connections {
        dl_req_buffer_size: 8,
        buffer_size: 32,
        yield_after: 200,
        retry_strategy: @interval {
            delay: @duration {
                secs: 54,
                nanos: 0
            },
            retries: 13
        }
    },
    @hello {
        buffer_size: 2
    }
}